--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -43,6 +43,15 @@
                 </div>
                 <div id="dmList" class="dm-list">
                     <!-- DM items will be added here -->
+                </div>
+            </div>
+            <div class="channel-category">
+                <div class="category-header">
+                    <span>GROUP CHATS</span>
+                    <button id="createGroupBtn" class="small-btn">+</button>
+                </div>
+                <div id="groupList" class="dm-list">
+                    <!-- Group items here -->
                 </div>
             </div>
         </div>
@@ -116,17 +125,44 @@
                     <!-- Header will be dynamically populated -->
                 </div>
                 <div class="chat-controls">
+                    <button class="icon-btn" id="callFriendBtn" title="Call" style="display: none;">
+                        <svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M6.62 10.79a15.053 15.053 0 0 0 6.59 6.59l2.2-2.2a1 1 0 0 1 1.01-.24c1.12.37 2.33.57 3.58.57a1 1 0 0 1 1 1V21a1 1 0 0 1-1 1C10.07 22 2 13.93 2 3a1 1 0 0 1 1-1h3.5a1 1 0 0 1 1 1c0 1.25.2 2.46.57 3.58a1 1 0 0 1-.24 1.01l-2.21 2.2Z"/></svg>
+                    </button>
                     <button class="icon-btn" id="membersBtn" title="Members" style="display: none;">
                         <svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M14 8.00598C14 10.211 12.206 12.006 10 12.006C7.795 12.006 6 10.211 6 8.00598C6 5.80098 7.795 4.00598 10 4.00598C12.206 4.00598 14 5.80098 14 8.00598ZM2 19.006C2 15.473 5.29 13.006 10 13.006C14.711 13.006 18 15.473 18 19.006V20.006H2V19.006Z"/></svg>
                     </button>
                 </div>
             </div>
-            <div class="messages" id="messagesContainer"></div>
-            <div class="message-input-container">
-                <div class="message-input-wrapper">
-                    <button class="attach-btn"><svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C11.5 2 11 2.19 10.59 2.59L2.59 10.59C1.8 11.37 1.8 12.63 2.59 13.41C3.37 14.2 4.63 14.2 5.41 13.41L11 7.83V16C11 16.55 11.45 17 12 17C12.55 17 13 16.55 13 16V7.83L18.59 13.41C19.37 14.2 20.63 14.2 21.41 13.41C22.2 12.63 22.2 11.37 21.41 10.59L13.41 2.59C13 2.19 12.5 2 12 2Z"/></svg></button>
-                    <input type="text" id="messageInput" placeholder="Message..." />
-                    <div class="emoji-btn"><svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2ZM15.5 8C16.328 8 17 8.672 17 9.5C17 10.328 16.328 11 15.5 11C14.672 11 14 10.328 14 9.5C14 8.672 14.672 8 15.5 8ZM8.5 8C9.328 8 10 8.672 10 9.5C10 10.328 9.328 11 8.5 11C7.672 11 7 10.328 7 9.5C7 8.672 7.672 8 8.5 8ZM12 17.5C9.656 17.5 7.586 16.019 6.673 13.852C6.594 13.643 6.673 13.407 6.852 13.266C7.031 13.125 7.281 13.117 7.469 13.242C8.766 14.109 10.352 14.5 12 14.5C13.648 14.5 15.234 14.109 16.531 13.242C16.719 13.117 16.969 13.125 17.148 13.266C17.327 13.407 17.406 13.643 17.327 13.852C16.414 16.019 14.344 17.5 12 17.5Z"/></svg></div>
+                        <div id="callBanner" class="call-banner hidden">
+                <div class="call-banner-main">
+                    <div class="call-banner-title">Ведется звонок</div>
+                    <div class="call-banner-meta">
+                        <span class="call-banner-participants"></span>
+                        <span class="call-banner-timer"></span>
+                    </div>
+                </div>
+                <div class="call-banner-actions">
+                    <button id="callBannerOpen" class="call-banner-btn">Вернуться в звонок</button>
+                    <button id="callBannerEnd" class="call-banner-btn danger">Завершить</button>
+                </div>
+            </div>
+            <div class="chat-main">
+                <div class="chat-messages-wrap">
+                    <div class="messages" id="messagesContainer"></div>
+                    <div class="message-input-container">
+                        <div class="message-input-wrapper">
+                            <button class="attach-btn"><svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C11.5 2 11 2.19 10.59 2.59L2.59 10.59C1.8 11.37 1.8 12.63 2.59 13.41C3.37 14.2 4.63 14.2 5.41 13.41L11 7.83V16C11 16.55 11.45 17 12 17C12.55 17 13 16.55 13 16V7.83L18.59 13.41C19.37 14.2 20.63 14.2 21.41 13.41C22.2 12.63 22.2 11.37 21.41 10.59L13.41 2.59C13 2.19 12.5 2 12 2Z"/></svg></button>
+                            <input type="text" id="messageInput" placeholder="Message..." />
+                            <div class="emoji-btn"><svg width="24" height="24" viewBox="0 0 24 24"><path fill="currentColor" d="M12 2C6.486 2 2 6.486 2 12C2 17.514 6.486 22 12 22C17.514 22 22 17.514 22 12C22 6.486 17.514 2 12 2ZM15.5 8C16.328 8 17 8.672 17 9.5C17 10.328 16.328 11 15.5 11C14.672 11 14 10.328 14 9.5C14 8.672 14.672 8 15.5 8ZM8.5 8C9.328 8 10 8.672 10 9.5C10 10.328 9.328 11 8.5 11C7.672 11 7 10.328 7 9.5C7 8.672 7.672 8 8.5 8ZM12 17.5C9.656 17.5 7.586 16.019 6.673 13.852C6.594 13.643 6.673 13.407 6.852 13.266C7.031 13.125 7.281 13.117 7.469 13.242C8.766 14.109 10.352 14.5 12 14.5C13.648 14.5 15.234 14.109 16.531 13.242C16.719 13.117 16.969 13.125 17.148 13.266C17.327 13.407 17.406 13.643 17.327 13.852C16.414 16.019 14.344 17.5 12 17.5Z"/></svg></div>
+                        </div>
+                    </div>
+                </div>
+                <div id="groupMembersPanel" class="group-members-panel hidden">
+                    <div class="group-members-header">
+                        <span>Members</span>
+                        <span id="groupMembersCount"></span>
+                    </div>
+                    <div id="groupMembersList" class="group-members-list"></div>
                 </div>
             </div>
         </div>
@@ -164,10 +200,13 @@
     <div id="callInterface" class="call-interface hidden">
         <div class="call-header">
             <div class="call-channel-name">Voice Channel</div>
-            <button class="close-call-btn" id="closeCallBtn">✕</button>
+            <button class="close-call-btn" id="closeCallBtn">×</button>
         </div>
         <div class="call-participants">
-            <div class="participant">
+            <div class="participant video-off">
+                <div class="avatar-placeholder">
+                    <div class="avatar-circle" id="localAvatar">U</div>
+                </div>
                 <video id="localVideo" autoplay muted playsinline></video>
                 <div class="participant-name">You</div>
             </div>
@@ -215,6 +254,51 @@
             <div class="incoming-call-actions">
                 <button id="acceptCallBtn" class="call-action-btn accept">Accept</button>
                 <button id="rejectCallBtn" class="call-action-btn reject">Decline</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Settings Modal -->
+    <div id="settingsModal" class="settings-modal hidden">
+        <div class="settings-overlay"></div>
+        <div class="settings-panel">
+            <div class="settings-header">
+                <div class="settings-title">Settings</div>
+                <button id="closeSettingsBtn" class="close-settings-btn">✕</button>
+            </div>
+            <div class="settings-body">
+                <div class="settings-sidebar">
+                    <div class="settings-search">
+                        <input type="text" id="settingsSearch" placeholder="Search" />
+                    </div>
+                    <div class="settings-section-title">User Settings</div>
+                    <div class="settings-nav">
+                        <button class="settings-item active" data-section="account">My Account</button>
+                        <button class="settings-item" data-section="privacy">Content & Privacy</button>
+                        <button class="settings-item" data-section="apps">Authorized Apps</button>
+                        <button class="settings-item" data-section="devices">Devices</button>
+                        <button class="settings-item" data-section="integrations">Integrations</button>
+                    </div>
+                    <div class="settings-section-title">Billing</div>
+                    <div class="settings-nav">
+                        <button class="settings-item" data-section="nitro">Nitro</button>
+                        <button class="settings-item" data-section="boosts">Server Boost</button>
+                        <button class="settings-item" data-section="subscriptions">Subscriptions</button>
+                        <button class="settings-item" data-section="billing">Billing</button>
+                    </div>
+                    <div class="settings-section-title">App Settings</div>
+                    <div class="settings-nav">
+                        <button class="settings-item" data-section="appearance">Appearance</button>
+                        <button class="settings-item" data-section="voice">Voice & Video</button>
+                        <button class="settings-item" data-section="notifications">Notifications</button>
+                    </div>
+                </div>
+                <div class="settings-content">
+                    <div id="settingsContentTitle" class="settings-content-title">My Account</div>
+                    <div id="settingsContentBody" class="settings-content-body">
+                        <p class="settings-placeholder">Настройки скоро будут доступны.</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
