--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <script src="/socket.io/socket.io.js"></script>
 </head>
 <body>
+    <!-- Custom Electron Titlebar -->
+<div class="titlebar">
+    <div class="titlebar-drag-region"></div>
+
+    <div class="titlebar-controls">
+        <button id="minBtn" class="titlebar-btn">—</button>
+        <button id="maxBtn" class="titlebar-btn">▢</button>
+        <button id="closeBtn" class="titlebar-btn close">×</button>
+    </div>
+</div>
+
     <!-- Server List (Left Sidebar) -->
     <div class="server-list">
         <div class="server-icon home active" id="friendsBtn" title="Friends">
