--- a/login.html
+++ b/login.html
@@ -7,6 +7,17 @@
     <link rel="stylesheet" href="auth.css">
 </head>
 <body>
+    <body>
+    <!-- Custom Electron Titlebar -->
+    <div class="titlebar">
+        <div class="titlebar-drag-region"></div>
+
+        <div class="titlebar-controls">
+            <button id="minBtn" class="titlebar-btn">—</button>
+            <button id="maxBtn" class="titlebar-btn">▢</button>
+            <button id="closeBtn" class="titlebar-btn close">×</button>
+        </div>
+</div>
     <div class="auth-container">
         <div class="auth-box">
             <div class="logo">
@@ -50,6 +61,7 @@
         </div>
     </div>
 
+    <script src="script.js"></script>
     <script src="auth.js"></script>
 </body>
 </html>
