--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Custom Electron Titlebar -->
 <div class="titlebar">
-    <div class="titlebar-drag-region"></div>
+    <div class="titlebar-title">Discord Clone</div>
 
     <div class="titlebar-controls">
         <button id="minBtn" class="titlebar-btn">—</button>
@@ -18,7 +18,6 @@
         <button id="closeBtn" class="titlebar-btn close">×</button>
     </div>
 </div>
-
     <!-- Server List (Left Sidebar) -->
     <div class="server-list">
         <div class="server-icon home active" id="friendsBtn" title="Friends">
