--- a/login.html
+++ b/login.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discord Clone - Login</title>
+    <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="auth.css">
 </head>
 <body>
-    <body>
     <!-- Custom Electron Titlebar -->
     <div class="titlebar">
-        <div class="titlebar-drag-region"></div>
+        <div class="titlebar-title">Discord Clone</div>
 
         <div class="titlebar-controls">
             <button id="minBtn" class="titlebar-btn">—</button>
             <button id="maxBtn" class="titlebar-btn">▢</button>
             <button id="closeBtn" class="titlebar-btn close">×</button>
         </div>
-</div>
+    </div>
+
     <div class="auth-container">
         <div class="auth-box">
             <div class="logo">
