--- a/login.html
+++ b/login.html
@@ -31,7 +31,7 @@
                 <p>We're so excited to see you again!</p>
             </div>
 
-            <form id="authForm">
+            <form id="authForm" novalidate autocomplete="off">
                 <div class="form-group" id="usernameGroup">
                     <label for="username">USERNAME</label>
                     <input type="text" id="username" name="username" required>
